[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/LanguageOptionButton.gd" type="Script" id=1]
[ext_resource path="res://UI/Settings.gd" type="Script" id=2]

[node name="SettingsWindowDialog" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -64.0
margin_right = 135.0
margin_bottom = 64.0
window_title = "Settings"
script = ExtResource( 2 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
columns = 2

[node name="LanguageLabel" type="Label" parent="GridContainer"]
margin_right = 129.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Language"

[node name="LanguageOptionButton" type="OptionButton" parent="GridContainer"]
margin_left = 133.0
margin_right = 262.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="RPCHostLabel" type="Label" parent="GridContainer"]
margin_top = 28.0
margin_right = 129.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "RPC Host"

[node name="RPCHostLineEdit" type="LineEdit" parent="GridContainer"]
margin_left = 133.0
margin_top = 28.0
margin_right = 262.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RPCPortLabel" type="Label" parent="GridContainer"]
margin_top = 60.0
margin_right = 129.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "RPC Port"

[node name="RPCPortSpinBox" type="SpinBox" parent="GridContainer"]
margin_left = 133.0
margin_top = 60.0
margin_right = 262.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 65535.0

[node name="RPCPathLabel" type="Label" parent="GridContainer"]
margin_top = 92.0
margin_right = 129.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "RPC Path"

[node name="RPCPathLineEdit" type="LineEdit" parent="GridContainer"]
margin_left = 133.0
margin_top = 92.0
margin_right = 262.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="about_to_show" from="." to="." method="_on_SettingsWindowDialog_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_SettingsWindowDialog_popup_hide"]
[connection signal="item_selected" from="GridContainer/LanguageOptionButton" to="GridContainer/LanguageOptionButton" method="_on_item_selected"]
